--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,7 @@ jobs:
         run: cmake --build build --target coverage_xml --parallel --config Debug
 
       - name: Upload coverage report
+        if: matrix.type.name == 'Debug'
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
