--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ concurrency:
 
 env:
   CPM_SOURCE_CACHE: cpm-cache
+  ACTION_CMAKE_VERSION: 3.21
+  ACTION_NINJA_VERSION: latest
+  CMAKE_CXX_COMPILER_LAUNCHER: ccache
 
 defaults:
   run:
@@ -17,35 +20,34 @@ jobs:
   tests_build_and_run:
     name: "${{ matrix.platform.name }} ${{ matrix.type.name }}"
     runs-on: "${{ matrix.platform.os }}"
-    env:
-      CMAKE_CXX_COMPILER_LAUNCHER: ccache
 
     strategy:
       fail-fast: false
       matrix:
         platform:
           - { name: Linux GCC, os: ubuntu-22.04, flags: -GNinja -DCMAKE_CXX_COMPILER=g++ }
-#          - { name: Linux CLANG, os: ubuntu-22.04, flags: -GNinja -DCMAKE_CXX_COMPILER=clang++ }
-#          - { name: Windows VS2022 x64, os: windows-2022, flags: -G "Visual Studio 17 2022" }
+          - { name: Linux CLANG, os: ubuntu-22.04, flags: -GNinja -DCMAKE_CXX_COMPILER=clang++ }
+          - { name: Windows VS2022, os: windows-2022, flags: -GNinja }
         type:
           - { name: Release }
-          - { name: Debug, flags: -DQUADTREE_CODE_COVERAGE=ON -DQUADTREE_CODE_COVERAGE_REPORT_XML=ON -DQUADTREE_CODE_COVERAGE_REPORT_HTML=OFF -DQUADTREE_CODE_COVERAGE_AUTORUN_TESTS=OFF}
-
+          - { name: Debug }
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Set Visual Studio Architecture
+        if: contains(matrix.platform.name, 'Windows VS')
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x64
+
       - name: Get CMake and Ninja
         uses: lukka/get-cmake@latest
         with:
-          cmakeVersion: 3.21
-          ninjaVersion: latest
-
-      - name: Install gcovr
-        if: matrix.type.name == 'Debug'
-        uses: threeal/pipx-install-action@v1
-        with:
-          packages: gcovr
+          cmakeVersion: ${{ env.ACTION_CMAKE_VERSION }}
+          ninjaVersion: ${{ env.ACTION_NINJA_VERSION }}
+          useLocalCache: true
+          useCloudCache: true
 
       - name: Setup CCache
         uses: hendrikmuhs/ccache-action@v1.2.13
@@ -61,7 +63,7 @@ jobs:
           enableCrossOsArchive: true
 
       - name: Configure CMake
-        run: cmake -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.type.name }} ${{ matrix.platform.flags }} ${{ matrix.type.flags }}
+        run: cmake -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.type.name }} ${{ matrix.platform.flags }}
 
       - name: Build
         run: cmake --build build --parallel --config ${{  matrix.type.name == 'Debug' && 'Debug' || 'Release' }}
@@ -69,12 +71,51 @@ jobs:
       - name: Run Tests
         run: ctest --test-dir build
 
+  code_coverage:
+    name: Code Coverage
+    needs: tests_build_and_run
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Get CMake and Ninja
+        uses: lukka/get-cmake@latest
+        with:
+          cmakeVersion: ${{ env.ACTION_CMAKE_VERSION }}
+          ninjaVersion: ${{ env.ACTION_NINJA_VERSION }}
+          useLocalCache: true
+          useCloudCache: true
+
+      - name: Install gcovr
+        uses: threeal/pipx-install-action@v1
+        with:
+          packages: gcovr
+
+      - name: Setup CCache
+        uses: hendrikmuhs/ccache-action@v1.2.13
+        with:
+          verbose: 2
+          key: "coverage-ccache"
+
+      - name: Setup CPM Cache
+        uses: actions/cache@v3
+        with:
+          key: cpm-cache-${{ hashFiles('cmake/cpm-dependencies.cmake') }}
+          path: ${{ env.CPM_SOURCE_CACHE }}
+          enableCrossOsArchive: true
+
+      - name: Configure CMake
+        run: cmake -Bbuild -DCMAKE_BUILD_TYPE=Debug -DQUADTREE_CODE_COVERAGE=ON -DQUADTREE_CODE_COVERAGE_REPORT_XML=ON -DQUADTREE_CODE_COVERAGE_REPORT_HTML=OFF -DQUADTREE_CODE_COVERAGE_AUTORUN_TESTS=ON
+
+      - name: Build
+        run: cmake --build build --parallel
+
       - name: Make Coverage Report
-        if: matrix.type.name == 'Debug'
-        run: cmake --build build --target coverage_xml --parallel --config Debug
+        run: cmake --build build --target coverage_xml --parallel
 
       - name: Upload coverage report
-        if: matrix.type.name == 'Debug'
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
